# ptr-utils

./: .gitignore  CONTRIBUTING.MD  Cargo.toml  README-DEV.MD  README.MD  README.md
.github/: artifact-groups.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: rust.yml
src/: AGENTS.md  Cargo.toml  lib.rs  unaligned.rs
src/ptr-utils/: Cargo.toml
src/ptr-utils/src/: lib.rs
src/ptr-utils/src/unaligned/: mod.rs  read.rs  tests.rs  write.rs
src/unaligned/: mod.rs  read.rs  write.rs
