[package]
name = "ptr-utils"
version = "0.1.1"
edition = "2021"
description = "A lightweight library providing utilities for working with raw pointers."
repository = "https://github.com/Sewer56/ptr-utils"
license-file = "../../LICENSE"
include = ["src/**/*"]
readme = "../../README.MD"

[features]
default = ["std"]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
